# Employee_Management_System_API

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
attendance/: apps.py  filters.py  models.py  serializers.py  urls.py  views.py
attendance/migrations/: 0001_initial.py
employee_project/: __init__.py  settings.py  urls.py  wsgi.py
employees/: admin.py  apps.py  exceptions.py  filters.py  middleware.py  models.py  pagination.py  permissions.py  serializers.py  signals.py  urls.py  utils.py  validators.py  views.py
employees/management/commands/: check_db.py  create_admin.py  seed_data.py
employees/migrations/: 0001_initial.py
tests/: conftest.py  test_attendance.py  test_auth.py  test_employees.py  test_filters.py  test_management_commands.py  test_middleware.py  test_models.py  test_pagination.py  test_permissions.py  test_serializers.py  test_signals.py  test_utils.py  test_validators.py
