[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "employee-management-system-api"
version = "1.0.0"
description = "A robust Django REST API for managing employees, departments, attendance, and performance reviews."
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "employee_project.settings"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["employees", "attendance"]
omit = ["*/migrations/*", "*/management/*", "*/tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 60
